CSS changes to fix sidebar overflow

--- a/src/request_bin.css
+++ b/src/request_bin.css
@@ -1,6 +1,7 @@
 body,
 html,
 #root {
+  min-height: 100%;
   height: 100%;
   box-sizing: border-box;
   background-color: #F2E9E4;
@@ -47,12 +48,13 @@ main {
 
 #sidebar {
   padding-top: 0.22rem;
-  display: flex;
-  flex-direction: column;
+  display: table;
   width: 40%;
-  height: 100%;
+  min-height: calc(100% - 104px);
+  height: auto;
   border-right: 1px solid #9A8C98;
   background-color: #F2E9E4;
+  border-collapse: collapse;
 }
 
 #sidebar table *, #sidebar h1 {
@@ -76,13 +78,6 @@ main {
   -webkit-animation: spin 1s ease-in-out infinite;
 }
 
-@keyframes spin {
-  to { -webkit-transform: rotate(360deg); }
-}
-@-webkit-keyframes spin {
-  to { -webkit-transform: rotate(360deg); }
-}
-
 main label {
   display: inline-block;
   cursor: pointer;
@@ -103,7 +98,7 @@ label[for=pause], label[for=structured] {
 }
 
 #request-content input:checked + label {
-  color: #22223B;
+  color: #4A4E69;
 }
 
 input[type=radio] {
@@ -138,13 +133,15 @@ td, li, #request-content-header {
 }
 
 #delete-all {
+  display: table-row;
+  position: relative;
+  vertical-align: bottom;
   text-align: center;
   padding: 0.5rem 1.1rem 1.1rem 1.1rem;
   cursor: pointer;
-  margin-top: auto;
   box-sizing: border-box;
   width: 100%;
-  vertical-align: middle;
+  border-top: 1px solid lightgrey;
 }
 
 #delete-all span {
@@ -153,6 +150,7 @@ td, li, #request-content-header {
   right: 0.35rem;
   font-size: 1.75rem;
   color: #e5383b;
+  padding: 0.5rem 0 1.1rem 0;
 }
 
 #sidebar tr:hover, #delete-all:hover {
